cuidarpi-raimundononato-bigdatasys-net/web-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    io.kompose.service: raimundononato
  name: raimundononato
spec:
  replicas: 3
  selector:
    matchLabels:
      io.kompose.service: raimundononato
  strategy:
    type: RollingUpdate
    rollingUpdate:
      maxUnavailable: 1
      maxSurge: 1
  minReadySeconds: 180
  template:
    metadata:
      labels:
        io.kompose.service: raimundononato
    spec:
      containers:
        - name: raimundononato
          image: 961341521437.dkr.ecr.sa-east-1.amazonaws.com/saude-publica-web:latest
          command: ["/bin/bash", "-c"]
          args:
            - |
              mkdir -p app/tmp/pids
              mkdir -p app/tmp/sockets
              bundle exec puma -C config/puma/production.rb
          ports:
            - containerPort: 3000
          volumeMounts:
            - name: azurefile
              mountPath: /mnt/compartilhado
          readinessProbe:
            tcpSocket:
              port: 3000
            initialDelaySeconds: 240      # Aguarda 5 minutos para dar tempo do app subir
            timeoutSeconds: 10
            periodSeconds: 10
            failureThreshold: 5
          livenessProbe:
            tcpSocket:
              port: 3000
            initialDelaySeconds: 240      # Aguarda 5 minutos antes de considerar que o app deve estar respondendo
            timeoutSeconds: 10
            periodSeconds: 20
            failureThreshold: 5
          resources:
            requests:
              cpu: "1000m"
              memory: "7Gi"
            limits:
              cpu: "1400m"
              memory: "8Gi"
      volumes:
        - name: azurefile
          persistentVolumeClaim:
            claimName: azurefile-pvc
      restartPolicy: Always
